--- a/TW/MI1/ex_mi_animatie_svg.html
+++ b/TW/MI1/ex_mi_animatie_svg.html
@@ -6,10 +6,9 @@
   </head>
 
   <body>
-      <svg width="200" height="200">
-          <circle id="cerc" cx="100" cy="100" r="30" stroke="black" stroke-width="5" fill="red" />
-          <animate xlink:href="#cerc" attributeName="r" from="30" to="100" dur="0.66s" repeatDur="2s" repeatCount="3"
-              begin="0s" />
+      <svg width="300" height="100">
+          <rect id="dreptunghi" width="50" height="20" stroke-width="3" stroke="blue" fill="yellow" x="10" y="10" />
+          <animate xlink: href="#dreptunghi" attributeName="x" from="10" to="200" dur="1s" repeatCount="4" />
       </svg>
   </body>
 
