Update style in MI1 ex1

--- a/TW/MI2/ex_css_introductiv.html
+++ b/TW/MI2/ex_css_introductiv.html
@@ -7,6 +7,19 @@
 </head>
 <!-- regulile scrise in html la paragrafe sunt mai 'importante' -->
 <style>
+    /* 1 2 */
+    body {
+        background-color: #EEEEEE;
+        padding-left: 50px;
+        padding-right: 5px;
+        background-image: url('http://irinaciocan.ro/imagini/gri.png'),
+            url('http://www.irinaciocan.ro/tehnici_web/imagini/carouri.png'),
+            url('http://irinaciocan.ro/tehnici_web/imagini/mazgaleala.png');
+        background-repeat: repeat-y, repeat, repeat;
+        background-position: 40px 0, -10px -10px, 0 0;
+    }
+
+    /* 3 4 */
     p {
         /* greu de citit */
         color: pink;
