--- a/TW/MI4/ex_css_display.html
+++ b/TW/MI4/ex_css_display.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Trei paragrafe si doua divuri</title>
-    <link rel="stylesheet" type="text/css" href="stil.css" />
+    <link rel="stylesheet" type="text/css" href="stil_1.css" />
 </head>
 
 <body>
