Update MI3 counter animation

--- a/TW/MI3/ex_mi_css_animatie_contor.html
+++ b/TW/MI3/ex_mi_css_animatie_contor.html
@@ -30,6 +30,8 @@
 		height: 10px;
 		background-color: magenta;
 		animation: spin 5s infinite;
+		margin: auto;
+		margin-top: 50px;
 	}
 
 	@keyframes spin {
@@ -40,6 +42,10 @@
 		to {
 			transform: rotate(360deg);
 		}
+	}
+
+	.numar {
+		display: none;
 	}
 </style>
 
