--- a/TW/MI3/ex_mi_css_tranz_anim_omulet_incruntat.html
+++ b/TW/MI3/ex_mi_css_tranz_anim_omulet_incruntat.html
@@ -41,12 +41,22 @@
 </head>
 
 <body>
-    <div class="face">
+    <!-- <div class="face">
         <div class="row">
             <div class="eyebrow"></div>
             <div class="eyebrow"></div>
         </div>
         <div class="row">
+            <div class="eye"></div>
+            <div class="eye"></div>
+        </div>
+    </div> -->
+    <div class="face" style="position: relative;">
+        <div class="row" style=" position: absolute; top: 50px; left: 50px;">
+            <div class="eyebrow"></div>
+            <div class="eyebrow"></div>
+        </div>
+        <div class="row" style="position: absolute; top: 70px; left: 75px;">
             <div class="eye"></div>
             <div class="eye"></div>
         </div>
