Fixed animation origin

--- a/TW/MI3/ex_mi_css_animatie_contor.html
+++ b/TW/MI3/ex_mi_css_animatie_contor.html
@@ -28,10 +28,14 @@
 	#cronometru {
 		width: 100px;
 		height: 10px;
+		top: 110px;
+		left: 110px;
+		position: absolute;
 		background-color: magenta;
-		animation: spin 5s infinite;
-		margin: auto;
-		margin-top: 50px;
+		opacity: 0.5;
+		transform: rotate(90deg);
+		transform-origin: 0px 0px;
+		animation: spin 10s infinite;
 	}
 
 	@keyframes spin {
